--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="icoontje" viewBox="0 0 16 16">
                 <path d="M5.929 1.757a.5.5 0 1 0-.858-.514L2.217 6H.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h.623l1.844 6.456A.75.75 0 0 0 3.69 15h8.622a.75.75 0 0 0 .722-.544L14.877 8h.623a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1.717L10.93 1.243a.5.5 0 1 0-.858.514L12.617 6H3.383L5.93 1.757zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1z" />
               </svg>
-              AANBOD
+              | AANBOD
             </h3>
           </div>
           <div class="accordion accordion-flush col-md-8 col-sm-12 col-xs-12" id="accordionFlushExample">
@@ -158,6 +158,21 @@
       </div>
     </section>
 
+    <section class="c-video">
+      <div class="container-xl">
+        <div class="row">
+          <div class="col-fluid">
+        <video class= "img-fluid" height="720" width="1280" controls autoplay muted>
+          <source src="img/BUYSE.mp4" />
+        </video>
+      </div>
+      </div>
+      </div>
+    </section>
+
+    <div class="c-padding">
+    </div>
+    
     <section class="carrousel">
       <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -212,7 +227,7 @@
               <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z" />
               <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z" />
             </svg>
-            GESCHIEDENIS
+            | GESCHIEDENIS
           </h3>
         </div>
 
@@ -240,7 +255,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
               <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z" />
             </svg>
-            CONTACT
+            | CONTACT
           </h3>
         </div>
 
